<resources>
    <string name="app_name">Registration App</string>
    <string name="authentication">Account Authentication</string>
    <string name="email_id">Email</string>
    <string name="hint_email_id">Enter Email</string>
    <string name="password">Password</string>
    <string name="hint_password">Enter Password</string>
    <string name="sign_up">Create New Account</string>
    <string name="login">Log In</string>

    <string name="user_registration_text">User Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="red_id">Red ID</string>
    <string name="hint_first_name">Enter First Name</string>
    <string name="hint_last_name">Enter Last Name</string>
    <string name="hint_red_id">Enter Red ID</string>
    <string name="selectAction">Select Course Action</string>
    <string name="courseDetails">Course Details</string>
    <string name="course_registered">Courses Registered</string>
    <string name="waitlist_confirmation">Do you want to add course to waitlist?</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="drop">Drop</string>
    <string name="view">View</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>

    <string name="title">Title</string>
    <string name="cno">Cno.</string>
    <string name="timing">Timing</string>
    <string name="instructor">Instructor</string>
    <string name="waitlistcount">Waitlisted</string>

    <string name="EMAIL">EMAIL</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="notifications_title">Notifications</string>

    <string-array name="levels">
        <item>graduate</item>
        <item>lowerdivision</item>
        <item>upperdivision</item>
    </string-array>
    <string-array name="startTimes">
        <item>0000</item>
        <item>0030</item>
        <item>0100</item>
        <item>0130</item>
        <item>0200</item>
        <item>0230</item>
        <item>0300</item>
        <item>0330</item>
        <item>0400</item>
        <item>0430</item>
        <item>0500</item>
        <item>0530</item>
        <item>0600</item>
        <item>0630</item>
        <item>0700</item>
        <item>0730</item>
        <item>0800</item>
        <item>0830</item>
        <item>0900</item>
        <item>0930</item>
        <item>1000</item>
        <item>1030</item>
        <item>1100</item>
        <item>1130</item>
        <item>1200</item>
        <item>1230</item>
        <item>1300</item>
        <item>1330</item>
        <item>1400</item>
        <item>1430</item>
        <item>1500</item>
        <item>1530</item>
        <item>1600</item>
        <item>1630</item>
        <item>1700</item>
        <item>1730</item>
        <item>1800</item>
        <item>1830</item>
        <item>1900</item>
        <item>1930</item>
        <item>2000</item>
        <item>2030</item>
        <item>2100</item>
        <item>2130</item>
        <item>2200</item>
        <item>2230</item>
        <item>2300</item>
        <item>2330</item>
    </string-array>
</resources>
