<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/customDialogText"
        android:text="@string/selectAction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:gravity="center"
        android:textSize="32dp"
        android:layout_marginTop="32dp"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">
        <Button
            android:id="@+id/viewButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:layout_weight="1"
            android:background="@color/medium_red"
            android:textColor="@color/colorBackground"
            android:layout_marginRight="16dp"
            />
        <Button
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_weight="1"
            android:background="@color/darkRed"
            android:textColor="@color/colorBackground"
            android:layout_marginRight="16dp"
            />
        <Button
            android:id="@+id/dropButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/drop"
            android:layout_weight="1"
            android:background="@color/darkest_red"
            android:textColor="@color/colorBackground"
            />
    </LinearLayout>

</LinearLayout>
