<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            android:text="@string/back"
            android:background="@color/darkRed"
            android:textColor="@color/colorBackground"
            android:layout_weight="1"
            android:layout_margin="@dimen/horizontal_spacing"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addCourseButton"
            android:text="@string/add"
            android:background="@color/darkRed"
            android:textColor="@color/colorBackground"
            android:layout_weight="1"
            android:layout_margin="@dimen/horizontal_spacing"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dropCourseButton"
            android:text="@string/drop"
            android:background="@color/darkRed"
            android:textColor="@color/colorBackground"
            android:layout_weight="1"
            android:layout_margin="@dimen/horizontal_spacing"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/courseDetails"
            android:textSize="@dimen/titles"
            android:textStyle="bold"
            android:layout_margin="@dimen/eight_dp_padding"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/sixteen_dp_padding">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/courseDetails" />
    </LinearLayout>


</LinearLayout>