<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:scrollbars="horizontal"
    android:background="@color/colorBackground">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="edu.sdsu.tvidhate.registerationapp.Activity.LoginActivity">

        <TextView
            android:id="@+id/user_registration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="@dimen/horizontal_spacing"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/user_registration_text"
            android:textSize="25dp"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:labelFor="@id/userFirstName"
                android:layout_width="@dimen/textViewWidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/horizontal_spacing"
                android:drawablePadding="@dimen/horizontal_spacing"
                android:padding="12dp"
                android:textColor="@color/colorText"
                android:background="@color/colorBackground"
                android:text="@string/first_name"/>

            <EditText
                android:id="@+id/userFirstName"
                android:layout_width="@dimen/editTextWidth"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:drawablePadding="@dimen/horizontal_spacing"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:labelFor="@id/userLastName"
                android:layout_width="@dimen/textViewWidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/horizontal_spacing"
                android:drawablePadding="@dimen/horizontal_spacing"
                android:padding="12dp"
                android:textColor="@color/colorText"
                android:background="@color/colorBackground"
                android:text="@string/last_name"/>

            <EditText
                android:id="@+id/userLastName"
                android:layout_width="@dimen/editTextWidth"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:drawablePadding="@dimen/horizontal_spacing"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:labelFor="@id/userRedID"
                android:layout_width="@dimen/textViewWidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/horizontal_spacing"
                android:drawablePadding="@dimen/horizontal_spacing"
                android:padding="12dp"
                android:textColor="@color/colorText"
                android:background="@color/colorBackground"
                android:text="@string/red_id"/>

            <EditText
                android:id="@+id/userRedID"
                android:layout_width="@dimen/editTextWidth"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:drawablePadding="@dimen/horizontal_spacing"
                android:hint="@string/hint_red_id"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:labelFor="@id/userEmail"
                android:layout_width="@dimen/textViewWidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/horizontal_spacing"
                android:drawablePadding="@dimen/horizontal_spacing"
                android:padding="12dp"
                android:textColor="@color/colorText"
                android:background="@color/colorBackground"
                android:text="@string/email_id"/>

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="@dimen/editTextWidth"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:drawablePadding="@dimen/horizontal_spacing"
                android:hint="@string/hint_email_id"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:labelFor="@id/userPassword"
                android:layout_width="@dimen/textViewWidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:drawablePadding="@dimen/horizontal_spacing"
                android:layout_marginEnd="@dimen/horizontal_spacing"
                android:padding="12dp"
                android:textColor="@color/colorText"
                android:background="@color/colorBackground"
                android:text="@string/password"
                />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="@dimen/editTextWidth"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:drawablePadding="@dimen/horizontal_spacing"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="@dimen/buttonWidth"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/horizontal_spacing"
                android:layout_marginTop="@dimen/horizontal_spacing"
                android:layout_marginEnd="@dimen/horizontal_spacing"
                android:layout_marginStart="@dimen/horizontal_spacing"
                android:padding="14dp"
                android:text="@string/cancel"
                android:background="@color/colorDim"
                android:textColor="@color/colorPrimary"
                />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="@dimen/buttonWidth"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/horizontal_spacing"
                android:layout_marginTop="@dimen/horizontal_spacing"
                android:layout_marginEnd="@dimen/horizontal_spacing"
                android:layout_marginStart="@dimen/horizontal_spacing"
                android:padding="14dp"
                android:text="@string/submit"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorBackground" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>

