<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:scrollbars="horizontal"
        android:background="@color/colorBackground">

     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="edu.sdsu.tvidhate.registerationapp.Activity.LoginActivity">

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/eight_dp_padding"
                android:layout_marginTop="80dp"
                android:drawablePadding="@dimen/horizontal_spacing"
                android:gravity="center"
                android:padding="@dimen/sixteen_dp_padding"
                android:text="@string/authentication"
                android:textSize="@dimen/titles"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:labelFor="@id/userEmail"
                    android:layout_width="@dimen/textViewWidth"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_marginBottom="@dimen/eight_dp_padding"
                    android:layout_marginTop="@dimen/eight_dp_padding"
                    android:layout_marginEnd="@dimen/horizontal_spacing"
                    android:drawablePadding="@dimen/horizontal_spacing"
                    android:padding="@dimen/twelve_dp_padding"
                    android:textColor="@color/colorText"
                    android:background="@color/colorBackground"
                    android:text="@string/email_id"/>

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight_dp_padding"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/eight_dp_padding"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:drawablePadding="@dimen/horizontal_spacing"
                    android:hint="@string/hint_email_id"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/twelve_dp_padding"
                    android:textColor="@color/black" />

            </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">

                 <TextView
                     android:labelFor="@id/userPassword"
                     android:layout_width="@dimen/textViewWidth"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textAlignment="textEnd"
                     android:layout_marginBottom="@dimen/eight_dp_padding"
                     android:layout_marginTop="@dimen/eight_dp_padding"
                     android:drawablePadding="@dimen/horizontal_spacing"
                     android:layout_marginEnd="@dimen/horizontal_spacing"
                     android:padding="@dimen/twelve_dp_padding"
                     android:textColor="@color/colorText"
                     android:background="@color/colorBackground"
                     android:text="@string/password"
                     />

                 <EditText
                     android:id="@+id/userPassword"
                     android:layout_width="@dimen/editTextWidth"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/eight_dp_padding"
                     android:layout_marginEnd="@dimen/activity_horizontal_margin"
                     android:layout_marginTop="@dimen/eight_dp_padding"
                     android:layout_weight="1"
                     android:background="@color/white"
                     android:drawablePadding="@dimen/horizontal_spacing"
                     android:hint="@string/hint_password"
                     android:inputType="textPassword"
                     android:padding="@dimen/twelve_dp_padding"
                     android:textColor="@color/black"
                     android:nextFocusForward="@id/login_submit"/>

             </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_sign_up"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginBottom="@dimen/eight_dp_padding"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/eight_dp_padding"
                    android:padding="@dimen/twelve_dp_padding"
                    android:text="@string/sign_up"
                    android:background="@color/colorBackground"
                    android:textColor="@color/colorPrimary"
                    android:textAllCaps="false"
                    style="@style/FlatButton"/>

                <Button
                    android:id="@+id/login_submit"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight_dp_padding"
                    android:layout_marginEnd="@dimen/horizontal_spacing"
                    android:layout_marginTop="@dimen/horizontal_spacing"
                    android:layout_weight="2"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/twelve_dp_padding"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/colorBackground" />

            </LinearLayout>


    </LinearLayout>
</ScrollView>

